fix(about) smaller titles on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_despre.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_despre.scss
@@ -311,3 +311,9 @@ article.type-despre .button:hover {
 #accordion .card-header .collapsed svg {
   transform: rotate(0deg);
 }
+
+@include media-breakpoint-down(sm) {
+  article.type-despre .entry-title {
+    font-size: 2rem;
+  }
+}
